--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build": "parcel build index.html -d public"
   },
   "dependencies": {
-    "normalize.css": "8.0.1",
-    "sass": "1.26.10"
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
-    "parcel-bundler": "^1.6.1"
+    "parcel-bundler": "^1.6.1",
+    "sass": "^1.26.10"
   },
   "keywords": []
 }
